fix: use different index on V2 search API transformer for user-tasks