@@ -20,16 +20,18 @@ import io.camunda.search.clients.query.SearchQuery;
 import io.camunda.search.clients.transformers.ServiceTransformers;
 import io.camunda.search.filter.UserTaskFilter;
 import io.camunda.search.filter.VariableValueFilter;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class UserTaskFilterTransformer implements FilterTransformer<UserTaskFilter> {
 
   private final ServiceTransformers transformers;
+  private final boolean camundaExporterEnabled;
 
-  public UserTaskFilterTransformer(final ServiceTransformers transformers) {
+  public UserTaskFilterTransformer(
+      final ServiceTransformers transformers, final boolean camundaExporterEnabled) {
     this.transformers = transformers;
+    this.camundaExporterEnabled = camundaExporterEnabled;
   }
 
   @Override
@@ -99,7 +101,10 @@ public class UserTaskFilterTransformer implements FilterTransformer<UserTaskFilt
 
   @Override
   public List<String> toIndices(final UserTaskFilter filter) {
-    return Arrays.asList("tasklist-list-view-8.6.0_");
+    if (camundaExporterEnabled) {
+      return List.of("tasklist-task-8.7.0_");
+    }
+    return List.of("tasklist-list-view-8.6.0_");
   }
 
   private SearchQuery getProcessInstanceKeysQuery(final List<Long> processInstanceKeys) {
